# kindaxml

./: .gitignore  .pre-commit-config.yaml  .typos.toml  404.html  Cargo.toml  DSL.md  LICENSE  README.md  biome.jsonc  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml
concepts/: index.html
docs/: concepts.md  index.md  modes.md
docs/examples/: basic.md  quick-examples.md
docs/styles/: annotation.css
examples/: basic.rs
examples/basic/: index.html
examples/quick-examples/: index.html
modes/: index.html
python/examples/: example.py
python/kindaxml/: __init__.py  __init__.pyi  build_doc_examples.py  example.py
python/tests/: test_kindaxml.py
search/: search_index.json
src/: lib.rs  main.rs  parser.rs  python_bindings.rs  types.rs
styles/: annotation.css
