[project]
name = "kindaxml"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
python-source = "python"
module-name = "kindaxml._kindaxml_rs"
features = ["python"]

[dependency-groups]
docs = [
    "mkdocs-include-markdown-plugin>=7.2.0",
    "mkdocs-material>=9.7.1",
]

[tool.uv]
# Rebuild package when any rust files change
cache-keys = [{file = "pyproject.toml"}, {file = "Cargo.toml"}, {file = "**/*.rs"}]
# Uncomment to build rust code in development mode
# config-settings = { build-args = '--profile=dev' }

[project.entry-points."mkdocs.plugins"]
kindaxml-build-doc-examples = "kindaxml.build_doc_examples:TransformPlugin"
